# rockchip_1106_voice_agent_system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ble_sdk/: btgatt-server.c
cmake/: toolchain.cmake
include/: app.h  audio_capture.h  audio_device.h  audio_playback_rockit.h  audio_uplink.h  bithion_core_bridge.h  ble_provision.h  config.h  core_json_compat.h  face_recognition.h  http.h  music_player.h  prompt_tone.h  udp_tts.h  utils.h  wifi_bootstrap.h  ws.h
scripts/ble/: start_ble_provision.sh
scripts/cicd/: Dockerfile
scripts/installer/: config_aivqe.json  install_zh_client.sh
scripts/installer/certs/: ca-certificates.pem
scripts/self_start/: S22zh_client  kill.sh  start_zh_client.sh
src/: app.c  audio_capture_alsa.c  audio_capture_rockit.c  audio_device.c  audio_playback_alsa.c  audio_playback_rockit.c  audio_uplink.c  bithion_core_compat.c  ble_provision.c  config.c  face_recognition.c  main.c  music_player.c  prompt_tone.c  udp_tts.c  utils.c  wifi_bootstrap.c
tests/: face_test.c
